# cbuild-tests

./: README.md
build-src/cbuild/test.release+HW_A/: test.release+HW_A.clog
build-src/cbuild/tmp/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json
prj/: test.cproject.yml  test.csolution.yml
prj/generated-projects/test.debug+HW_A/: test.debug+HW_A.cprj
prj/generated-projects/test.debug+HW_A/RTE/_test.debug_HW_A/: RTE_Components.h
prj/generated-projects/test.debug+HW_B/: test.debug+HW_B.cprj
prj/generated-projects/test.debug+HW_B/RTE/_test.debug_HW_B/: RTE_Components.h
prj/generated-projects/test.release+HW_A/: test.release+HW_A.cprj
prj/generated-projects/test.release+HW_A/RTE/_test.release_HW_A/: RTE_Components.h
prj/generated-projects/test.release+HW_B/: test.release+HW_B.cprj
prj/generated-projects/test.release+HW_B/RTE/_test.release_HW_B/: RTE_Components.h
